File organsation and fixes

--- a/animation/project-1/index.html
+++ b/animation/project-1/index.html
@@ -105,7 +105,7 @@
               <script src="https://unpkg.com/@rive-app/canvas@2.10.3"></script>
               <script>
                 const r = new rive.Rive({
-                  src: "/assets/riv/sage.riv",
+                  src: "/assets/rive/sage.riv",
                   canvas: document.getElementById("canvas"),
                   autoplay: true,
                   stateMachines: "sageState",
