--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                   <h2>Demo Reel</h2>
                   <!-- <span>2022</span> -->
                 </div>
-                <img class="img-fluid" src="assets/img/Reel Thumbnail.webp">
+                <img class="img-fluid" src="assets/img/Thumbnails/Reel Thumbnail.webp">
               </a>
             </div>
           </div>
@@ -255,7 +255,7 @@
                   <div class="work-info">
                     <h3>Secrets of Serpents</h3>
                   </div>
-                  <img class="img-fluid" src="assets/img/serpents.webp">
+                  <img class="img-fluid" src="assets/img/Thumbnails/serpents.webp">
                 </a>
               </div>
               <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -263,7 +263,7 @@
                   <div class="work-info">
                     <h3>Power of Dreams</h3>
                   </div>
-                  <img class="img-fluid" src="assets/img/dreams.webp">
+                  <img class="img-fluid" src="assets/img/Thumbnails/dreams.webp">
                 </a>
               </div>
               <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -271,7 +271,7 @@
                   <div class="work-info">
                     <h3>Sadhguru meets Wrestlers</h3>
                   </div>
-                  <img class="img-fluid" src="assets/img/wrestling.webp">
+                  <img class="img-fluid" src="assets/img/Thumbnails/wrestling.webp">
                 </a>
               </div>
               <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -279,7 +279,7 @@
                   <div class="work-info">
                     <h3>Are Geniuses Born or Made?</h3>
                   </div>
-                  <img class="img-fluid" src="assets/img/Beethoven.webp">
+                  <img class="img-fluid" src="assets/img/Thumbnails/Beethoven.webp">
                 </a>
               </div>
               <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -287,7 +287,7 @@
                   <div class="work-info">
                     <h3>A Walk for Soil</h3>
                   </div>
-                  <img class="img-fluid" src="assets/img/A Walk for Soil.webp">
+                  <img class="img-fluid" src="assets/img/Thumbnails/A Walk for Soil.webp">
                 </a>
               </div>
               <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -295,7 +295,7 @@
                   <div class="work-info">
                     <h3>Save Soil</h3>
                   </div>
-                  <img class="img-fluid" src="assets/img/Save Soil (16-9).webp">
+                  <img class="img-fluid" src="assets/img/Thumbnails/Save Soil (16-9).webp">
                 </a>
               </div>
             </div>
