--- a/animation/project-3/index.html
+++ b/animation/project-3/index.html
@@ -15,7 +15,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Project-3</title>
+  <title>Project-3 | Unity-Vfx</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -37,6 +37,7 @@
 
   <!-- Template Main CSS File -->
   <link href="/assets/css/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="/assets/unity/TemplateData/style.css">
 
   <!-- =======================================================
   * Template Name: MyPortfolio - v4.7.0
@@ -80,63 +81,123 @@
   </nav>
 
   <main id="main">
-    <!-- ======= Overview Section ======= -->
     <section class="section pt-3 pb-3">
-      <div class="container">
-        <div class="row mb-4 align-items-center">
-          <div class="" data-aos="fade-up">
-            <h2>Ayodhya - Ram Mandir: The Symbol of Sanatana Dharma</h2>
-            <p>Embark on a divine journey in a one-minute animated spectacle, capturing the grand inauguration of the
-              Lord Ram temple in Ayodhya.</p>
+      <div id="unity-container" class="unity-desktop">
+        <canvas id="unity-canvas" width=960 height=540 tabindex="-1"></canvas>
+        <div id="unity-loading-bar">
+          <div id="unity-logo"></div>
+          <div id="unity-progress-bar-empty">
+            <div id="unity-progress-bar-full"></div>
           </div>
         </div>
-      </div>
-
-      <div class="site-section pb-0">
-        <div class="container">
-          <div class="row align-items-stretch">
-            <div class="col-md-8" data-aos="fade-up">
-              <div class="video-container">
-                <iframe src="https://player.vimeo.com/video/906940689?h=fd1d3d5749" width="640" height="564"
-                  frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-              </div>
-            </div>
-            <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
-              <h3 class="h3 heading">Credits</h3>
-              <div class="mb-3">
-                <strong>Content curation, AI image generation and Video editing: </strong>
-                <span>Navin Kumar</span>
-                <p></p>
-              </div>
-              <strong class="mb-3">Softwares:</strong>
-              <ul class="list-unstyled mb-5">
-                <li>ChatGPT (LLM)</li>
-                <li>Draw Things (Stable Diffusion)</li>
-                <li>DaVinci Resolve</li>
-              </ul>
-              <!--p><a href="#" class="readmore">Visit Website</a></p-->
-            </div>
-          </div>
-        </div>
-    </section><!-- End Overview Section -->
-
-    <!-- ======= Brief Concept Section ======= -->
-    <section class="section pt-3 pb-3">
-      <div class="container" data-aos="fade-up">
-        <div class="row align-items-end">
-          <h3 class="h3 heading">Brief / Concept</h3>
-          <p>This one-minute animated short film captures the glorious inauguration of the Lord Ram temple in Ayodhya.
-            It begins with a spiritual atmosphere,
-            showcasing the lighting of diyas and the arrival of dignitaries. The central focus is on unveiling the
-            divine idol of Lord Ram, followed by grand celebrations including
-            fireworks, dances, and cultural performances symbolizing unity in diversity. Viewers are invited to join in
-            offering prayers, receiving prasad, exploring the temple,
-            and receiving final blessings from Shree Ram. The film aims to create a divine spectacle, celebrating faith,
-            unity, and the monumental inauguration of the Ram temple.</p>
+        <div id="unity-warning"> </div>
+        <div id="unity-footer">
+          <div id="unity-logo-title-footer"></div>
+          <div id="unity-fullscreen-button"></div>
+          <div id="unity-build-title">Portal Spawner</div>
         </div>
       </div>
-    </section><!-- End Brief Concept Section -->
+      <script>
+        var canvas = document.querySelector("#unity-canvas");
 
+        // Shows a temporary message banner/ribbon for a few seconds, or
+        // a permanent error message on top of the canvas if type=='error'.
+        // If type=='warning', a yellow highlight color is used.
+        // Modify or remove this function to customize the visually presented
+        // way that non-critical warnings and error messages are presented to the
+        // user.
+        function unityShowBanner(msg, type) {
+          var warningBanner = document.querySelector("#unity-warning");
+          function updateBannerVisibility() {
+            warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
+          }
+          var div = document.createElement('div');
+          div.innerHTML = msg;
+          warningBanner.appendChild(div);
+          if (type == 'error') div.style = 'background: red; padding: 10px;';
+          else {
+            if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
+            setTimeout(function () {
+              warningBanner.removeChild(div);
+              updateBannerVisibility();
+            }, 5000);
+          }
+          updateBannerVisibility();
+        }
+
+        var buildUrl = "assets/unity/Portal-Spawner";
+        var loaderUrl = buildUrl + "/portalSpawner.loader.js";
+        var config = {
+          arguments: [],
+          dataUrl: buildUrl + "/portalSpawner.data",
+          frameworkUrl: buildUrl + "/portalSpawner.framework.js",
+          codeUrl: buildUrl + "/portalSpawner.wasm",
+          streamingAssetsUrl: "StreamingAssets",
+          companyName: "DefaultCompany",
+          productName: "Portal Spawner",
+          productVersion: "1.0",
+          showBanner: unityShowBanner,
+        };
+
+        // By default, Unity keeps WebGL canvas render target size matched with
+        // the DOM size of the canvas element (scaled by window.devicePixelRatio)
+        // Set this to false if you want to decouple this synchronization from
+        // happening inside the engine, and you would instead like to size up
+        // the canvas DOM size and WebGL render target sizes yourself.
+        // config.matchWebGLToCanvasSize = false;
+
+        // If you would like all file writes inside Unity Application.persistentDataPath
+        // directory to automatically persist so that the contents are remembered when
+        // the user revisits the site the next time, uncomment the following line:
+        // config.autoSyncPersistentDataPath = true;
+        // This autosyncing is currently not the default behavior to avoid regressing
+        // existing user projects that might rely on the earlier manual
+        // JS_FileSystem_Sync() behavior, but in future Unity version, this will be
+        // expected to change.
+
+        if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
+          // Mobile device style: fill the whole browser client area with the game canvas:
+
+          var meta = document.createElement('meta');
+          meta.name = 'viewport';
+          meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
+          document.getElementsByTagName('head')[0].appendChild(meta);
+          document.querySelector("#unity-container").className = "unity-mobile";
+          canvas.className = "unity-mobile";
+
+          // To lower canvas resolution on mobile devices to gain some
+          // performance, uncomment the following line:
+          // config.devicePixelRatio = 1;
+
+
+        } else {
+          // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
+          canvas.style.width = "960px";
+          canvas.style.height = "540px";
+        }
+
+        document.querySelector("#unity-loading-bar").style.display = "block";
+
+        var script = document.createElement("script");
+        script.src = loaderUrl;
+        script.onload = () => {
+          createUnityInstance(canvas, config, (progress) => {
+            document.querySelector("#unity-progress-bar-full").style.width = 100 * progress + "%";
+          }).then((unityInstance) => {
+            document.querySelector("#unity-loading-bar").style.display = "none";
+            document.querySelector("#unity-fullscreen-button").onclick = () => {
+              unityInstance.SetFullscreen(1);
+            };
+
+          }).catch((message) => {
+            alert(message);
+          });
+        };
+
+        document.body.appendChild(script);
+
+      </script>
+    </section>
     <!-- ======= Previous/Next Section ======= -->
     <div class="container py-2 py-md-5">
       <div class="row">
