--- a/animation/project-3/index.html
+++ b/animation/project-3/index.html
@@ -162,9 +162,8 @@
               // JS_FileSystem_Sync() behavior, but in future Unity version, this will be
               // expected to change.
 
-              if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-                // Mobile device style: fill the whole browser client area with the game canvas:
-
+              if (/iPhone|Android/i.test(navigator.userAgent)) {
+                // Mobile device style: fill the whole browser client area with the game canvas
                 var meta = document.createElement('meta');
                 meta.name = 'viewport';
                 meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
@@ -172,16 +171,27 @@
                 document.querySelector("#unity-container").classList.add("unity-mobile");
                 document.querySelector("#unity-canvas").classList.add("unity-mobile");
 
-                // To lower canvas resolution on mobile devices to gain some
-                // performance, uncomment the following line:
-                // config.devicePixelRatio = 1;
+                // Set the canvas aspect ratio to 4:5 for mobile devices
+                var aspectRatioMobile = 4 / 5;
+                var windowWidth = window.innerWidth;
+                var windowHeight = window.innerHeight;
 
+                // Adjust the canvas size to maintain the aspect ratio
+                if (windowWidth / windowHeight < aspectRatioMobile) {
+                  document.querySelector("#unity-canvas").style.width = windowWidth + 'px';
+                  document.querySelector("#unity-canvas").style.height = (windowWidth * aspectRatioMobile) + 'px';
+                } else {
+                  document.querySelector("#unity-canvas").style.height = windowHeight + 'px';
+                  document.querySelector("#unity-canvas").style.width = (windowHeight * (1 / aspectRatioMobile)) + 'px';
+                }
 
               } else {
-                // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
+                // Desktop or iPad style: Keep aspect ratio of 9:16
+                var aspectRatioDesktop = 9 / 16;
                 canvas.style.width = "960px";
-                canvas.style.height = "540px";
+                canvas.style.height = (960 * aspectRatioDesktop) + "px";
               }
+
 
               document.querySelector("#unity-loading-bar").style.display = "block";
 
