--- a/index.html
+++ b/index.html
@@ -140,11 +140,13 @@
 
         <!--Committed Changes on 22-08-2023-->
         <div class="box" data-aos="fade-up" data-aos-delay="200">
-          <button class="tablink" onclick="openPage('AI', this, '#323946')"><img src="assets/img/robot.webp"
-              class="pic"><span class="text">&nbsp&nbspAI Art</span></button>
           <button class="tablink" onclick="openPage('Animation', this, '#323946')" id="defaultOpen"><img
-              src="assets/img/animation_pic.webp" class="pic"><span class="text">&nbsp&nbspAnimation</span></button>
-          <button class="tablink" onclick="openPage('Video', this, '#323946')"><img src="assets/img/video_edit.webp"
+            src="assets/img/animation.webp" class="pic"><span class="text">&nbsp&nbspAnimation</span></button>
+          <button class="tablink" onclick="openPage('TechArt', this, '#323946')" id="design_tab"><img src="assets/img/techart.webp"
+              class="pic"><span class="text">&nbsp&nbspTechArt</span></button>
+          <button class="tablink" onclick="openPage('AI', this, '#323946')" id="design_tab"><img src="assets/img/aiart.webp"
+              class="pic"><span class="text">&nbsp&nbspAI Art</span></button>
+          <button class="tablink" onclick="openPage('Video', this, '#323946')"><img src="assets/img/video_editing.webp"
               class="pic"><span class="text">&nbsp&nbspVideo Editing</span></button>
           <!-- id="btn1" -->
           <div id="AI" class="tabcontent">
@@ -214,6 +216,57 @@
                 }
 
                 .container_grid_animation {
+                  position: relative;
+                  width: 100%;
+                  display: flex;
+                  gap: 10px;
+                }
+
+                .dots-container {
+                  position: absolute;
+                  bottom: 10px;
+                  /* Adjust distance from the bottom of the video */
+                  width: 100%;
+                  /* Ensure it spans the width of the video */
+                  text-align: center;
+                  z-index: 1;
+                  /* Ensures dots are above the video */
+                }
+
+                .dot {
+                  height: 10px;
+                  width: 10px;
+                  margin: 0 5px;
+                  background-color: #bbb;
+                  border-radius: 50%;
+                  display: inline-block;
+                  transition: background-color 0.3s;
+                }
+                .dot.active {
+                  background-color: #717171;
+                }
+              </style>
+            </div>
+          </div>
+
+          <div id="TechArt" class="tabcontent">
+            <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
+              <!-- <div class="custom-container-animation"> -->
+              <main>
+                <div class="container_grid_techart">
+                </div>
+              </main>
+              <script src="assets/js/animGrid_TechArt.js"></script>
+              <style>
+                main {
+                  position: relative;
+                  top: 0;
+                  left: 0;
+                  width: 100%;
+                  height: 100%;
+                }
+
+                .container_grid_techart {
                   position: relative;
                   width: 100%;
                   display: flex;
