--- a/about/index.html
+++ b/about/index.html
@@ -133,7 +133,7 @@
           </div>
           <div class="col-6 col-sm-4 col-md-2 mb-3">
             <a href="#" class="client-logo">
-              <h4>Isha Foundation</h4>
+              <h4>Dashtoon Studio</h4>
             </a>
           </div>
           <div class="col-6 col-sm-4 col-md-2 mb-3">
@@ -143,7 +143,7 @@
           </div>
           <div class="col-6 col-sm-4 col-md-2 mb-3">
             <a href="#" class="client-logo">
-              <h4>Dashtoon Studio</h4>
+              <h4>Isha Foundation</h4>
             </a>
           </div>
         </div>
@@ -159,7 +159,7 @@
             <p>Don't hesitate to reach out. Got a question? Have a fun project or just want to say hello? Well, you've
               come to right place my friend!</p>
 
-            <form id="contactForm" action="api/contact" method="post" role="form" class="php-email-form">
+            <form id="contactForm" action="/api/contact" method="post" role="form" class="php-email-form">
 
               <div class="row gy-3">
                 <div class="col-md-6 form-group">
