--- a/about/index.html
+++ b/about/index.html
@@ -201,7 +201,7 @@
                   formData.forEach((value, key) => formObject[key] = value);
               
                   try {
-                      const response = await fetch(window.location.origin + "/api/contact", {
+                      const response = await fetch("/api/contact", {
                           method: "POST",
                           headers: { "Content-Type": "application/json" },
                           body: JSON.stringify(formObject)
