bugs resolved in tab section

--- a/about/index.html
+++ b/about/index.html
@@ -159,7 +159,7 @@
             <p>Don't hesitate to reach out. Got a question? Have a fun project or just want to say hello? Well, you've
               come to right place my friend!</p>
 
-            <form id="contactForm" action="/api/contact" method="post" role="form" class="php-email-form">
+            <form id="contactForm" action="https://launchpadnetworkx.vercel.app/api/contact_navin" method="post" role="form" class="php-email-form">
 
               <div class="row gy-3">
                 <div class="col-md-6 form-group">
