--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             src="assets/img/animation.webp" class="pic"><span class="text">&nbsp&nbspAnimation</span></button>
           <button class="tablink" onclick="openPage('TechArt', this, '#323946')" id="design_tab"><img src="assets/img/techart.webp"
               class="pic"><span class="text">&nbsp&nbspTech Art</span></button>
-          <button class="tablink" onclick="openPage('AI', this, '#323946')" id="design_tab"><img src="assets/img/aiart.webp"
+          <button class="tablink" onclick="openPage('AI', this, '#323946')" id="design_tab1"><img src="assets/img/aiart.webp"
               class="pic"><span class="text">&nbsp&nbspAI Art</span></button>
           <button class="tablink" onclick="openPage('Video', this, '#323946')"><img src="assets/img/video_editing.webp"
               class="pic"><span class="text">&nbsp&nbspVideo Editing</span></button>
