new content added

--- a/techart/project-2/index.html
+++ b/techart/project-2/index.html
@@ -100,10 +100,10 @@
             <div id="unity-footer">
               <div id="unity-logo-title-footer"></div>
               <div id="unity-right-footer">
-                  <div id="unity-build-title">Character Skinning</div>
-                  <div id="unity-fullscreen-button"></div>
+                <div id="unity-build-title">Character Skinning</div>
+                <div id="unity-fullscreen-button"></div>
               </div>
-          </div>          
+            </div>
             <script>
               var canvas = document.querySelector("#unity-canvas");
 
@@ -209,12 +209,34 @@
       </div>
     </section>
 
+    <section class="section pt-3 pb-3">
+      <div class="container" data-aos="fade-up">
+        <div class="row align-items-end">
+          <h3 class="h3 heading1">Workflow</h3>
+    
+          <div class="col-md-8" data-aos="fade-up">
+            <div class="video-container2">
+              <img class="w-100" src="/assets/img/Thumbnails/character1.webp" alt="character1">
+              <!-- <p class="video-title">Water Flow (Shader Graph)</p> -->
+            </div>
+          </div>
+    
+          <div class="col-md-8" data-aos="fade-up">
+            <div class="video-container2">
+              <img class="w-100" src="/assets/img/Thumbnails/character2.webp" alt="character1">
+              <!-- <p class="video-title">God Rays (Particle System)</p> -->
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>    
+
     <!-- ======= Previous/Next Section ======= -->
     <div class="container py-2 py-md-5">
       <div class="row">
         <div class="col-md-12">
           <div class="align-left">
-            <a href="../project-1" class="previous round"><i class='bx bxs-chevron-left'></i></a>
+            <a href="#" class="previous round"><i class='bx bxs-chevron-left'></i></a>
           </div>
           <div class="align-right">
             <a href="../project-3" class="next round"><i class='bx bxs-chevron-right'></i></a>
