--- a/techart/project-1/index.html
+++ b/techart/project-1/index.html
@@ -138,7 +138,7 @@
     <section class="section pt-3 pb-3">
       <div class="container" data-aos="fade-up">
         <div class="row align-items-end">
-          <h3 class="h3 heading">Brief / Concept</h3>
+          <h3 class="h3 heading">Workflow</h3>
           <img src="/assets/img/sage-demo.gif" alt="Sage Demo GIF" class="gif">
 
           <p>In the above project, the software that will ultimately load this file doesn’t
@@ -154,10 +154,10 @@
       <div class="row">
         <div class="col-md-12">
           <div class="align-left">
-            <a href="#" class="previous round"><i class='bx bxs-chevron-left'></i></a>
+            <a href="../project-4" class="previous round"><i class='bx bxs-chevron-left'></i></a>
           </div>
           <div class="align-right">
-            <a href="../project-2" class="next round"><i class='bx bxs-chevron-right'></i></a>
+            <a href="#" class="next round"><i class='bx bxs-chevron-right'></i></a>
           </div>
         </div>
       </div>
